--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi Tech Fabrication</title>
-
-    <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
@@ -17,18 +15,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-
-    <!-- Main CSS file -->
     <link rel="stylesheet" href="assets/style/index.css" />
   </head>
   <body>
-    <!-- ======= Header ======= -->
     <header id="header" class="fixed-top d-flex align-items-center">
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-lg-between"
@@ -89,9 +82,6 @@
         >
       </div>
     </header>
-    <!-- End Header -->
-
-    <!-- ====== Home Section ====== -->
     <section id="home" class="d-flex align-items-center">
       <div class="container position-relative text-left text-lg-start">
         <div class="row">
@@ -116,18 +106,14 @@
               class="modal-content d-flex justify-content-center align-items-center"
             >
               <video id="video" width="600px" height="400px" controls>
-                <source src="./assets/videos/vid1.mp4" />
+                <source src="./assets/video/vid1.mp4" />
               </video>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Home -->
-
-    <!-- ====== Main Section ====== -->
     <main id="main">
-      <!-- ====== About Section ====== -->
       <section id="about" class="d-flex align-items-center">
         <div class="container">
           <div class="row">
@@ -143,9 +129,6 @@
         </div>
       </section>
     </main>
-    <!-- End Main -->
-
-    <!-- ====== Products Section ====== -->
     <section id="products">
       <div class="container">
         <div class="section-title">
@@ -154,152 +137,11 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="carousel-indicators d-none">
-          <!-- <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="4"
-            aria-current="true"
-            aria-label="Slide 5"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="5"
-            aria-label="Slide 6"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="6"
-            aria-label="Slide 7"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="7"
-            aria-label="Slide 8"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="8"
-            aria-current="true"
-            aria-label="Slide 9"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="9"
-            aria-label="Slide 10"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="10"
-            aria-label="Slide 11"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="11"
-            aria-label="Slide 12"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button> -->
-        </div>
-
+        <div class="carousel-indicators d-none"></div>
         <div
           class="row d-flex justify-content-center align-items-center g-0"
           id="products_row"
-        >
-          <!-- <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_1.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_2.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_3.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_4.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_5.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_6.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_7.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_8.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_9.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_10.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_11.png" alt="product" />
-          </div>
-          <div class="col-lg-3 col-md-4 product-item">
-            <img class="img-fluid" src="assets/img/img_12.png" alt="product" />
-          </div> -->
-        </div>
-
+        ></div>
         <button
           class="carousel-control-prev d-none carousel-btn"
           type="button"
@@ -320,9 +162,6 @@
         </button>
       </div>
     </section>
-    <!-- End Products -->
-
-    <!-- ====== Contact Section ====== -->
     <section id="contact">
       <div class="container">
         <div class="section-title">
@@ -330,9 +169,6 @@
           <p>Contact Us</p>
         </div>
       </div>
-
-      <!-- <div id="map"></div> -->
-
       <div class="container">
         <div class="row mt-4">
           <div class="col-lg-4">
@@ -360,25 +196,7 @@
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <!-- <iframe
-              name="hiddenFrame"
-              class="hide"
-              style="
-                position: absolute;
-                top: -1px;
-                left: -1px;
-                width: 1px;
-                height: 1px;
-              "
-            ></iframe> -->
-            <!-- <form action="" method="post" role="form" target="hiddenFrame"> -->
-            <!-- action="http://localhost:5000/send" -->
-            <form
-              action="https://hi-tech-fab.herokuapp.com/send"
-              method="post"
-              role="form"
-              class="email-form"
-            >
+            <form action="" method="post" role="form" class="email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input
@@ -441,9 +259,6 @@
         </div>
       </div>
     </section>
-    <!-- End Contact -->
-
-    <!-- ====== Footer ====== -->
     <footer id="footer">
       <div class="container">
         <div class="copyright">
@@ -452,19 +267,13 @@
         </div>
       </div>
     </footer>
-    <!-- End Footer -->
-
-    <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Main JS file -->
     <script src="./assets/js/onLoad.js"></script>
     <script src="./assets/js/index.js"></script>
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfNbPy6umGHaiuCCMP6b-DxNPzgVaiLNw&callback=initMap"></script> -->
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
