--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi Tech Fabrication</title>
+
+    <link rel="preload" href="assets/js/index.js" as="script" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
@@ -97,13 +100,13 @@
           <div
             class="col-lg-4 d-flex align-items-center justify-content-center position-relative"
           >
-            <a href="#" onclick="openModel()" class="play-btn"></a>
+            <a href="#" onclick="openVideo()" class="play-btn"></a>
           </div>
 
-          <div id="myModal" class="modal">
-            <span class="close cursor" onclick="closeModal()">&times;</span>
+          <div id="myVideo" class="video">
+            <span class="close cursor" onclick="closeVideo()">&times;</span>
             <div
-              class="modal-content d-flex justify-content-center align-items-center"
+              class="video-content d-flex justify-content-center align-items-center"
             >
               <video id="video" width="600px" height="400px" controls>
                 <source src="./assets/video/vid1.mp4" />
@@ -137,11 +140,150 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="carousel-indicators d-none"></div>
+        <div class="carousel-indicators d-none">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="4"
+            aria-current="true"
+            aria-label="Slide 5"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="5"
+            aria-label="Slide 6"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="6"
+            aria-label="Slide 7"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="7"
+            aria-label="Slide 8"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="8"
+            aria-current="true"
+            aria-label="Slide 9"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="9"
+            aria-label="Slide 10"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="10"
+            aria-label="Slide 11"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="11"
+            aria-label="Slide 12"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+        </div>
         <div
           class="row d-flex justify-content-center align-items-center g-0"
           id="products_row"
-        ></div>
+        >
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_1.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_2.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_3.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_4.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_5.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_6.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_7.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_8.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_9.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_10.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_11.png" alt="product" />
+          </div>
+          <div class="col-lg-3 col-md-4 product-item">
+            <img class="img-fluid" src="assets/img/img_12.png" alt="product" />
+          </div>
+        </div>
         <button
           class="carousel-control-prev d-none carousel-btn"
           type="button"
@@ -196,7 +338,13 @@
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="" method="post" role="form" class="email-form">
+            <form
+              id="form"
+              action="https://hi-tech-fab.herokuapp.com/send"
+              method="post"
+              role="form"
+              class="email-form"
+            >
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input
@@ -244,15 +392,14 @@
               </div>
 
               <div class="my-3">
-                <div class="sent-message d-none">
+                <div class="error-message">Oops! Form submission failed.</div>
+                <div class="sent-message">
                   Your message has been sent. Thank you!
                 </div>
               </div>
 
               <div class="text-center">
-                <button type="submit" onclick="submit_btn()">
-                  Send A Message
-                </button>
+                <button type="submit">Send A Message</button>
               </div>
             </form>
           </div>
@@ -267,13 +414,20 @@
         </div>
       </div>
     </footer>
+    <a
+      href="#"
+      id="back-to-top"
+      class="d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/onLoad.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/screenSize.js"></script>
+    <script src="./assets/js/index.js" defer></script>
+    <script src="./assets/js/validate.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
