--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi Tech Fabrication</title>
 
+    <link rel="preload" href="style.css" as="style" />
     <link rel="preload" href="assets/js/index.js" as="script" />
 
     <link
