--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi Tech Fabrication</title>
 
-    <link rel="preload" href="style.css" as="style" />
+    <link rel="preload" href="assets/style/style.css" as="style" />
     <link rel="preload" href="assets/js/index.js" as="script" />
 
     <link
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/style/index.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
   </head>
   <body>
     <header id="header" class="fixed-top d-flex align-items-center">
@@ -400,11 +400,11 @@
               </div>
             </div>
           </div>
-          <!-- action="https://hi-tech-fab.herokuapp.com/send" -->
+
           <div class="col-lg-8 mt-5 mt-lg-0">
             <form
               id="form"
-              action="http://localhost:5000/send"
+              action="https://hi-tech-fab.herokuapp.com/send"
               method="post"
               role="form"
               class="email-form"
@@ -463,7 +463,7 @@
               </div>
 
               <div class="text-center">
-                <button type="submit">Send A Message</button>
+                <button type="submit">Send Message</button>
               </div>
             </form>
           </div>
@@ -475,7 +475,6 @@
         <div
           class="social-links d-flex justify-content-center align-items-center gap-3 mt-4"
         >
-          <!-- <a href="#" class="facebook"><i class="bx bxl-whatsapp"></i></a> -->
           <a
             href="https://www.instagram.com/hitechfabrication/"
             class="instagram"
@@ -486,7 +485,7 @@
             class="linkedin"
             ><i class="bx bxl-linkedin"></i
           ></a>
-          <a href="javascript:ScrollToMessage()" class="google-plus"
+          <a href="javascript:ScrollToMessage()" class="envelope"
             ><i class="bx bxs-envelope"></i
           ></a>
         </div>
